--- a/package.json
+++ b/package.json
@@ -20,17 +20,24 @@
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
     "@mui/styled-engine-sc": "^6.3.1",
+    "@mui/x-date-pickers": "^7.23.3",
     "@next/font": "^14.2.15",
+    "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "framer-motion": "^11.15.0",
     "gsap": "^3.12.5",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "react": "^19.0.0",
+    "react-confirm-alert": "^3.0.6",
+    "react-date-range": "^2.0.1",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "react-toastify": "^11.0.2",
     "styled-components": "^6.1.14",
     "tailwind-merge": "^2.6.0",
@@ -40,6 +47,7 @@
     "@eslint/eslintrc": "^3",
     "@types/node": "22.10.4",
     "@types/react": "19.0.2",
+    "@types/react-date-range": "^1.4.9",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
