--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-redux": "^9.2.0",
     "react-select": "^5.9.0",
     "react-toastify": "^11.0.2",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.1.14",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
