--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gsap": "^3.12.5",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
+    "razorpay": "^2.9.5",
     "react": "^19.0.0",
     "react-confirm-alert": "^3.0.6",
     "react-date-range": "^2.0.1",
