--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@next/font": "^14.2.15",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
+    "chalk": "^5.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
