--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-select": "^5.9.0",
+    "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.2",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.14",
