Updates payment key to use environment variable instead of hardcoded value.

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 NEXT_PUBLIC_BASE_URL="http://localhost:8080"
+NEXT_PUBLIC_RAZORPAY_ID="rzp_test_WRfdKwBTLqcFdo"
+NEXT_PUBLIC_RAZORPAY_KEY="FAaxFvt3AORQCYlHRQAomuUX"
