--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@next/font": "^14.2.15",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "chalk": "^5.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.15.0",
     "gsap": "^3.12.5",
+    "jquery": "^3.7.1",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "razorpay": "^2.9.5",
@@ -45,11 +47,13 @@
     "react-toastify": "^11.0.2",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.14",
+    "summernote": "^0.9.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/jquery": "^3.5.32",
     "@types/node": "22.10.4",
     "@types/react": "19.0.2",
     "@types/react-date-range": "^1.4.9",
